--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,8 @@ $$$proj_{L}$(\(\overrightarrow{w})$$ $is the shadow of \overrightarrow{w} onto L
 \overrightarrow{v} is the spanning vector of the line L then the projection can be expressed as 
 $$$proj_{L}$(\(\overrightarrow{w})=\frac{\overrightarrow{w}\cdotp\overrightarrow{v}}{\overrightarrow{v}\cdotp\overrightarrow{v}}\cdotp\overrightarrow{v}$$ 
 
+(The University of Sydney - School of Mathematics and Statistics, n.d.).
+
 \section{Projections on Subspaces}
 
 \
@@ -39,7 +41,7 @@ $\overrightarrow{w}=\overrightarrow{v}+\overrightarrow{x}$ where $\overrightarro
 We can define $proj_{V}(\(\overrightarrow{w})=\overrightarrow{v}$ which is part of \overrightarrow{w} that includes \overrightarrow{v}\in V. $We can define $proj_{$V^\perp$}(\(\overrightarrow{w})=\overrightarrow{x}$ which is part of \overrightarrow{w} that includes the orthogonal complement \overrightarrow{x}\in $V^\perp$. This is also a linear transformation. V is a subspace of $\mathbb{R}$^n.  $\{\overrightarrow{s_{1}},\overrightarrow{s_{2}},...,{\overrightarrow{s_{k}}}\}$ $
 is a basis for V set. Then if you take the span of vectors you can construct any vectors in that subspace and those vectors are linearly independent$
 
-The projection of a vector onto subspace is the closest point to another vector contained in V. 
+The projection of a vector onto subspace is the closest point to another vector contained in V (Vector Space Projection, n.d.).
 
 \section{Ordinary Least Squares Regression-Linear Model}
 
@@ -66,12 +68,12 @@ b tells you what value of happiness would be if the value of independent variabl
 Linear regression takes all of the values, squares them, and sums them all up $$\sum_{i=1}^{n} (Y_{i}-\hat{Y_{i}})^2$$
 or $$\sum_{i=1}^{n} (Y_{i}-(mx_{i}+b))^2$$
 This will spit out a positive value because of the positive distance. We get this line that best represents the data "by minimizing the y-distances from the corresponding y-values on the to-be-determined line. The square of each of those distances is of the form (y_{j}-(mx_{j}+b))^2."$$ 
-$The total distance is considered the square root of the sum of these squares. 
+$The total distance is considered the square root of the sum of these squares (Yale University, n.d.).
 
 \
 To relate this back to projections, linear regression is exactly the projection of y values onto subspace of the span of two vectors$\overrightarrow{v_{1}}$ and $\overrightarrow{v_{2}}$, where $\overrightarrow{v_{1}}$ 
-is the vector in R^2 $with all coordinates in 1$ $and $\overrightarrow{v_{2}}$ is the vector in R^2 $with coordinates $x_{j}$.
-Minimizing the square of distance from y to the vector in subspace of the span of vectors is the same as finding the orthogonal projection.
+is the vector in R^2 $with all coordinates in "'1'"$ $and $\overrightarrow{v_{2}}$ is the vector in R^2 $with coordinates "'$x_{j}$'".
+Minimizing the square of distance from y to the vector in subspace of the span of vectors is the same as finding the orthogonal projection (Cherlin, n.d.).
  $
 
 \section{Ordinary Least Squares Regression-Multiple}
@@ -88,7 +90,7 @@ Linear regression helps us find out where a business is going and growing and is
 
 Linear regression is used in economics to determine how consumers act when there has been a change in price.  Linear regression helps guide decisions on pricing an item based on demand.
 
-Linear regression is particularly used in implication for research.  Researchers can use small prediction models to talk about a larger population sample. If what we can predict of what a smaller population does, we can predict what a larger population does. This can save an institution or a researcher a lot of money.
+Linear regression is particularly used in implication for research.  Researchers can use small prediction models to talk about a larger population sample. If what we can predict of what a smaller population does, we can predict what a larger population does. This can save an institution or a researcher a lot of money (Shitut, 2017).
 
 Linear regression can be used to analyze a risk. For example in auto insurance, linear regression pulls together a homogeneous units which are similar types of risk into a pool, charges each person in the pool a small premium in exchange for protection. An underwriter uses this method to determine how likely it is that a loss will occur. With linear regression, actuaries can actually predict how likely a loss is to occur!
 
@@ -96,14 +98,21 @@ Linear regression can be used to analyze a risk. For example in auto insurance, 
 
 \
 
-Cherlin, Gregory. "Lecture 25 Orthogonal Projection and Least Squares Approximation." Cherlin Math 250. Rutgers, The State University of New Jersey, n.d. Web. 11 May 2017.
+Cherlin, G. (n.d.). Lecture 25 Orthogonal Projection and Least Squares Approximation. Retrieved May 11, 2017, from http://sites.math.rutgers.edu/~cherlin/Courses/250/Lectures/250L25.html
 
 \
 
-Linear Regression. Yale University, n.d. Web. 11 May 2017.
+Shitut, N. (2017, April 11). Popular Applications of Linear Regression for Businesses. Retrieved May 11, 2017, from http://analyticstraining.com/2014/popular-applications-of-linear-regression-for-businesses/
 
 \
 
-Shitut, Neha. "Popular Applications of Linear Regression for Businesses." Analytics
-Training. Jigsaw Academy Education Pvt Ltd, 11 Apr. 2017. Web. 11 May 2017.
+The University of Sydney - School of Mathematics and Statistics. (n.d.). Retrieved May 11, 2017, from http://www.maths.usyd.edu.au/u/MOW/vectors/vectors-10/v-10-2.html
+
+\
+Vector Space Projection. (n.d.). Retrieved May 11, 2017, from http://mathworld.wolfram.com/VectorSpaceProjection.html
+
+
+\
+
+Yale University. (n.d.). Retrieved May 11, 2017, from http://www.stat.yale.edu/Courses/1997-98/101/linreg.htm
 \end{document}
