--- a/main.tex
+++ b/main.tex
@@ -86,9 +86,9 @@ I provided a slide with a picture on this, however, I did not elaborate on it. T
 
 \
 
-Linear regression helps us find out where a business is going and growing and is essential for achieving long term goals. Linear Regression can be used in business to evaluate trends and make predictions. We use the example of sales. Trend line using linear regression can be created and the company may use the slope to estimate the future sales. 
+Linear Regression can be used in business to make predictions based on the data given. We use the example of sales. The best line that fits that represents the data using linear regression can be created and the company may use the slope to estimate the future sales. 
 
-Linear regression is used in economics to determine how consumers act when there has been a change in price.  Linear regression helps guide decisions on pricing an item based on demand.
+Linear regression can be used in economics to determine how consumers act when there has been a change in price.  Linear regression helps guide decisions on pricing an item based on demand.
 
 Linear regression is particularly used in implication for research.  Researchers can use small prediction models to talk about a larger population sample. If what we can predict of what a smaller population does, we can predict what a larger population does. This can save an institution or a researcher a lot of money (Shitut, 2017).
 
